# canvas-deadline-ball

./: .gitignore  DESIGN.md  INSTALL.md  INSTALL.zh-CN.md  LICENSE  PRIVACY.md  PRIVACY.zh-CN.md  README.md  README.zh-CN.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: deadlines.rs  lib.rs  main.rs
